# LearnLoop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile.agent  REQUIREMENTS.md  docker-compose.agent.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/app/: __init__.py  main.py  observability.py
backend/app/domain/: __init__.py  models.py  normalization.py  practice_selection.py  scoring.py  selection.py  state.py
backend/app/presentation/: __init__.py  auth.py  bulk_ingestion.py  bulk_serialization.py  coaching.py  deps.py  errors.py  exam_grading.py  exam_helpers.py  exam_serialization.py  exams.py  folders.py  helpers.py  home.py  ingestion.py  ingestion_serialization.py  ingestion_workflow.py  media.py  practice.py  problem_creation.py  problem_serialization.py  problems.py  schemas.py  selection_config.py  settings.py  solution_generation.py  tag_registration.py  tags.py  teacher_password.py
backend/docs/: exam_grading_parity.md  ingestion_repository_mutation_catalog.md
backend/scripts/: migrate_tags.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: conftest.py  test_auth.py  test_bulk_ingestion.py  test_coaching.py  test_exams.py  test_folders.py  test_home.py  test_ingestion.py  test_matches_query.py  test_practice.py  test_practice_submit.py  test_problems.py  test_settings_info.py  test_tags.py  test_teacher_password.py
backend/tests/domain/: test_bulk_ingestion_boxes.py  test_bulk_ingestion_state.py  test_coaching_models.py  test_coaching_service.py  (+8 more)
(+260 files in other folders)
