[project]
name = "learnloop-backend"
version = "0.1.0"
description = "LearnLoop backend scaffold"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "bcrypt>=4.1.3,<5.0.0",
  "boto3>=1.35.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings[dotenv]>=2.3.0,<3.0.0",
  "pymongo>=4.8.0,<5.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.7,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
